--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script src="./models/3_clouds.class.js"></script>
     <script src="./models/3_chicken.class.js"></script>
     <script src="./models/1_keyboard.class.js"></script>
+    <script src="./models/1_level.class.js"></script>
+    <script src="./levels/level01.class.js"></script>
     <script src="./js/game.js"></script>
 
 <body onload="init()">
