--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="./models/3_pepe.class.js"></script>
     <script src="./models/3_clouds.class.js"></script>
     <script src="./models/3_chicken.class.js"></script>
+    <script src="./models/3_endboss.class.js"></script>
     <script src="./models/1_keyboard.class.js"></script>
     <script src="./models/1_level.class.js"></script>
     <script src="./levels/level01.js"></script>
