--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
 <body onload="init()">
     <h1>EL POLLO LOCO</h1>
     <canvas id="canvas" width="800" height="480"></canvas>
+    <audio id="background-music" src="audio/pepe_ambient.mp3" loop></audio>
 </body>
 </html>
