drawableObject.class.js inserted as 2nd Level

--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <title>Jose Luis Ignacio Vincente "Pepe" el Peligroso</title>
     <link rel="icon" href="polloloco.ico" />
     <link rel="stylesheet" href="./style/style.css">
-    <script src="./models/2_drawable-object.class.js"></script>
-
+      <script src="./models/2_drawable-object.class.js"></script>
+<script src="./models/0_level.class.js"></script>
     <script src="./models/3_movable-object.class.js"></script>    
-    <script src="./models/3_movable-object.class.js"></script>
-
+    <script src="./models/3_static-object.class.js"></script>
     <script src="./models/4_background_static.class.js"></script>
     <script src="./models/4_background_moving.class.js"></script>
     <script src="./models/4_pepe.class.js"></script>
@@ -18,10 +17,12 @@
     <script src="./models/4_chicken.class.js"></script>
     <script src="./models/4_endboss.class.js"></script>
     <script src="./models/0_keyboard.class.js"></script>
-    <script src="./models/0_level.class.js"></script>
+    
+
+   
     <script src="./levels/level01.js"></script>
+     <script src="./models/1_world.class.js"></script>
     <script src="./js/game.js"></script>
-    <script src="./models/1_world.class.js"></script>
     
 <body onload="init()">
     <h1>EL POLLO LOCO</h1>
