--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="./models/4_clouds.class.js"></script>
     <script src="./models/4_chicken.class.js"></script>
     <script src="./models/4_endboss.class.js"></script>
+    <script src="./models/4_statusbar.class.js"></script>
     <script src="./models/0_keyboard.class.js"></script>
     
 
@@ -27,6 +28,10 @@
 <body onload="init()">
     <h1>EL POLLO LOCO</h1>
     <canvas id="canvas" width="800" height="480"></canvas>
-    <audio id="background-music" src="audio/pepe_ambient.mp3" loop></audio>
+    <audio loop> 
+        <source id="background-music" src="audio/pepe_ambient.mp3" type="audio/mpeg"></source>
+        Your browser does not support the audio element.
+    </audio>
+   
 </body>
 </html>
