Alle Statusbars integriert

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <script src="./models/4_clouds.class.js"></script>
     <script src="./models/4_chicken.class.js"></script>
     <script src="./models/4_endboss.class.js"></script>
-    <script src="./models/4_statusbar.class.js"></script>
+    <script src="./models/4_statusbarPepe.class.js"></script>
+    <script src="./models/4_statusbarCoin.class.js"></script>
+    <script src="./models/4_statusbarChilli.class.js"></script>
+    <script src="./models/4_statusbarEndboss.class.js"></script>
     <script src="./models/0_keyboard.class.js"></script>
     
 
