StatusBar Endboss positioniert

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     <script src="./models/4_statusbarCoin.class.js"></script>
     <script src="./models/4_statusbarChilli.class.js"></script>
     <script src="./models/4_statusbarEndboss.class.js"></script>
+    <script src="./models/4_throwable-object.class.js"></script>
     <script src="./models/0_keyboard.class.js"></script>
     
-
+    
    
     <script src="./levels/level01.js"></script>
      <script src="./models/1_world.class.js"></script>
