Hinzufügen von Bottle und Coins - first steps

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <script src="./models/0_level.class.js"></script>
     <script src="./models/3_movable-object.class.js"></script>    
     <script src="./models/3_static-object.class.js"></script>
+    <script src="./models/3_collectable-object.class.js"></script>
+    <script src="./models/3_countable-item.class.js"></script>    
     <script src="./models/4_background_static.class.js"></script>
     <script src="./models/4_background_moving.class.js"></script>
     <script src="./models/4_pepe.class.js"></script>
@@ -33,7 +35,7 @@
     <h1>EL POLLO LOCO</h1>
     <canvas id="canvas" width="800" height="480"></canvas>
     <audio loop> 
-        <source id="background-music" src="audio/pepe_ambient.mp3" type="audio/mpeg"></source>
+        <source id="background-music" src="audio/pepe_ambient.mp3" type="audio/mpeg" loop></source>
         Your browser does not support the audio element.
     </audio>
    
