isColliding mit Offset: Zwischenstand

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="./models/4_statusbarChilli.class.js"></script>
     <script src="./models/4_statusbarEndboss.class.js"></script>
     <script src="./models/4_throwable-object.class.js"></script>
+    <script src="./models/4_collidable-object.class.js"></script>
     <script src="./models/0_keyboard.class.js"></script>
     
     
