Wurfbahn verbessert // health Score angepasst // auskommentierten Code entfernt

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <p class="center">Press ENTER to start</p>
         </div> -->
     </section>
-    
+    <div class="stimmungsbild">
+<img src="./img/skelett_gallina.png" alt="Skelett in der Wueste" class="skelett"></div>    
 </body>
 </html>
