--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="./models/4_pepe.class.js"></script>
     <script src="./models/4_clouds.class.js"></script>
     <script src="./models/4_chicken.class.js"></script>
+     <script src="./models/4_minichicken.class.js"></script>
     <script src="./models/4_endboss.class.js"></script>
     <script src="./models/4_statusbarPepe.class.js"></script>
     <script src="./models/4_statusbarCoin.class.js"></script>
@@ -64,10 +65,10 @@
                     <div id="loader" class="loader"></div>
                 </div>
                 <div id="gameOverScreen" class="gameOver hidden">
-                    <div id="gameOverBG" class="gameOverBG">
+                  
                     <div class="gameOverText">
-                        <h2>Click REPLY-Button to restart</h2>
-                    </div></div>
+                        <!-- <h2>Click REPLY-Button to restart</h2> -->
+                    </div>
                 </div>
                 <div id="buttonContent" class="hidden close"></div>
             </div>
