GameOverWinning-Screen // Beginn

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div id="sound" onclick="toggleSound()" title="Sound On/Off">
                     <div id="on-off" class="controlButton soundON"></div>
                 </div>
-                <div id="play" onclick="togglePlay()" title="Play/Pause">
+                <div id="play" onclick="togglePlay()" title="Play/Pause" style="display:none">
                     <div id="switch" class="controlButton play"></div>
                 </div>
             </div>
