--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <div id="gameOverScreen" class="gameOver displayNone">
                   
-                    <div class="winner-BG">
+                    <div class="winningBG">
                     </div>
                   
                 </div>
