EveryThingWork // just Mobile Styling is missing

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                 </div>
                 <div id="gameOverScreen" class="gameOver displayNone">
                   
-                    <div class="winningBG">
-                    </div>
+                    <!-- <div class="winningBG">
+                    </div> -->
                   
                 </div>
                 <div id="buttonContent" class="displayNone close"></div>
