1. Step of Refactoring

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jose Luis Ignacio Vincente "Pepe" el Peligroso</title>
     <link rel="icon" href="polloloco.ico" />
-
+    <link href="./style/style.css" rel="stylesheet">
     <link rel="preload" href="./fonts/Ojuju/Ojuju-VariableFont_wght.ttf" as="font" type="font/ttf"
         crossorigin="anonymous">
     <link rel="preload" href="./fonts/Matemasie/Matemasie-Regular.ttf" as="font" type="font/ttf"
         crossorigin="anonymous">
 
-    <link href="./style/style.css" rel="stylesheet">
+
     <script src="./models/2_drawable-object.class.js"></script>
     <script src="./models/0_level.class.js"></script> <!-- Level zuerst! -->
     <script src="./levels/level01.js"></script> <!-- Dann Level01 -->
@@ -41,7 +41,7 @@
     <script src="./models/0_keyboard.class.js"></script>
 
     <script src="./js/game.js" defer></script>
-    <script src="./js/templates.js"></script>
+    <script src="./js/htmlAndStyle.js"></script>
 
 <body>
 
