--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@ Por favor, gira tu dispositivo horizontalmente para jugar.
                 <div id="play" onclick="togglePlay('button')" title="Play/Pause" style="display:none">
                     <div id="switch" class="controlButton play"></div>
                 </div>
-                 <div id="gohome" onlick="location.reload()" title="Reload" style="display:none">
-                    <div id="goback" class="controlButton goback"></div>
+                 <div id="restart" onclick="reStart()" title="Restart" style="display:none">
+                    <div id="goRestart" class="controlButton goRestart"></div>
                 </div>
         </div>
         </div>
