Improvements of Endboss-Code, Bottle Offset and Sound, as Jump-Behavior

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@ Por favor, gira tu dispositivo horizontalmente para jugar.
                 <div id="play" onclick="togglePlay('button')" title="Play/Pause" style="display:none">
                     <div id="switch" class="controlButton play"></div>
                 </div>
-                 <div id="restart" onclick="reStart()" title="Restart" style="display:none">
-                    <div id="goRestart" class="controlButton goRestart"></div>
+                 <div id="gohome" onclick="location.reload()" title="Go Home" style="display:none">
+                    <div id="goHome" class="controlButton goHome"></div>
                 </div>
         </div>
         </div>
