--- a/index.html
+++ b/index.html
@@ -42,11 +42,14 @@
     <script src="./models/4_throwable-object.class.js"></script>
     <script src="./models/4_collidable-object.class.js"></script>
     <script src="./models/0_keyboard.class.js"></script>
+    <script src="./models/0_highscoreManager.class.js"></script>
     <script src="./js/preload.js"></script>
+
 
     <script src="./js/game.js" defer></script>
     <script src="./js/htmlAndStyle.js"></script>    
     <script src="./js/keyboardEvents.js"></script>
+    <script src="./js/gameOver.js"></script>
 
 <body style="background-color: #fdf08f">
 <div id="turnToLandscape" class="notLandscape displayNone">
